--- a/vignettes/wcgrads.Rmd
+++ b/vignettes/wcgrads.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
-date: "`r Sys.Date()`"
+title: "Williams College Initials"
+author: "Ben Czekanski"
+date: "January 9, 2017"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
@@ -9,50 +9,44 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
+##Introduction
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+The package __wcgrads__ examines the distribution of initials of Williams College Graduates. It uses information published by the Registrar of the College in pdf form and 
 
-## Vignette Info
+to show which combinations of initials are most popular, and visualizes this information.
 
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
+---
 
-## Styles
+##Data
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
+The data for this package comes from Course Catalogs posted online by the Williams College Registrar. These files are first downloaded and then converted to pdf using the pdftotext executable. They are then cut down to just the list of graduating seniors and further broken into first and last names. Once in first name last name format, the multiple graduating classes are combined into one data frame of all students that graduated from 2001-2016.
 
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
+---
 
-## Figures
+##Functions
 
-The figure sizes have been customised so that you can easily put two images side-by-side. 
+There are four functions within the __wcgrads__ package:
 
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+**_download_pdfs_**
+
+_download_pdfs()_ simply downloads the Course Catalogs in pdf form
+
+**_get_data_**
+
+_get_data(file)_ converts these pdfs to txt to a data frame and then cuts out the parts that aren't names. It also breaks the strings of names and honors into just first and last initials.
+
+**_combine_data_**
+
+_combine_data()_ uses all _get_data_ to make all of the pdfs into txt documents and then one large, cleaned data frame of all the initials and graduation years
+
+**_visual_**
+
+_visual(x)_ creates a visualization of initials showing both the joint and marginal distributions of first and last initials for all graduates from 2001-2016, as shown below.
+
+```{r fig.width=7, fig.height=6, echo = FALSE, warning = FALSE}
+library(wcgrads)
+visual(x)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
-
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
-```
-
-Also a quote using `>`:
-
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+##Conclusion
+Looking at the plot generated, we see several main trends. First, the distribution of last initials appears to be much more even than the distribution of first initials. This suggests that there may be some letters that are more popular than others, that is, when given the choice of first initial, letters A-E, J-N, and R-T are given more than other letters. This could also simply be because there are more options for first names that start with these initials. The difference between first and last initals appears to be in F-H and W, which all occur as last initials much more than they do as first initials. Another interesting aspect of the graphic is observing which first initials are more or less popular given a last initial. For example, L and K occur as last initials at a similar rate. However, the pairing CL occurs much more frequently than the pairing CK, possibly due to avoidance of alliteration. Inversely, while E and K occur about as frequently as first names, EC occurs much more than KC. The plot offers the opportunity to make many other observations, and I invite the reader to explore them. Further advancements on this subject could include showing change over time, further breakdown by name, or breaking this down by sound rather than letter to further examine how sound affects name choice. Another possible use of the data is to compare Williams graduates to the population as a whole. 
