--- a/wcgrads/wcgrads.Rmd
+++ b/wcgrads/wcgrads.Rmd
@@ -1,17 +1,18 @@
 ---
 title: Williams College Graduates
 date: "`r Sys.Date()`"
-author: 
-name: Ben Czekanski
-affiliation: Middlebury College '18
-email:  bczekanski@middlebury.edu
+author:
+  name: Ben Czekanski
+  affiliation: Middlebury College '18
+  email:  bczekanski@middlebury.edu
 
 abstract: >
   This package cleans and examines data found in Williams College Course Catalogs about graduating seniors from 2000-2016. The data in this package includes the names, graduation years and predicted genders of graduates, as well as information about latin and departmental honors. In addition to the data __wcgrads__ provides examples of interesting analyses of the data as examples for users.
 vignette: >
-  %\VignetteIndexEntry{sdfvb}
-output: html_document
-runtime: shiny
+  %\VignetteIndexEntry{wcgrads}
+  %\VignetteEngine{knitr::rmarkdown}
+  \usepackage[utf8]{inputenc}
+output: rticles::rjournal_article
 ---
 
 
@@ -78,61 +79,9 @@ dept_honors()
 
 In addition to the departmental honors and gender, __wcgrads__ provides data about latin honors and gender. We can see that over this time period slightly more men earned Summa Cum Laude than women, while a few more women than men acheived Magna Cum Laude. The differences for Cum Laude and no honors is much more. Significantly more women than men earned Cum Laude, while more men than women did not earn latin honors. From this chart we can infer that the average woman has a higher GPA than the average man. However, at the Magna Cum Laude and Summa Cum Laude levels, there are only minor differences, which suggests the variance of male GPAs is larger than females'.
 
-```{r echo = FALSE, warning = FALSE}
+```{r warning = FALSE}
 library(wcgrads)
-#latin_honors_gender()
-library(dplyr)
-library(ggplot2)
-      selectInput("select", label = ("Chart Type"),
-                  choices = list("In Year" = 1, "Through Year" = 2), selected = 2)
-      sliderInput("year", "Grad Year", min = 2000, max = 2016, value = 2016, sep = "")
-
- renderPlot({
-
-   if(input$select == 1){
-
-      a <- allyrs %>%
-      filter(grad.year == input$year) %>%
-      select(latin.honors, gender) %>%
-      mutate(latin.honors = ifelse(is.na(latin.honors) == TRUE, "None", latin.honors)) %>%
-      group_by(latin.honors, gender) %>%
-      summarize(count = n())
-
-      z <- a %>%
-        ggplot(aes(latin.honors, count, fill = gender)) +
-          geom_bar(stat = "identity", position = "dodge") +
-          ggtitle("Latin Honors and Gender") +
-          xlab("Latin Honors") +
-          ylab("Number of Gaduates") +
-          guides(fill = guide_legend(title = "Gender")) +
-          labs(caption = "The number of students of each gender acheiving each level of latin honors.") +
-          ylim(0, 200) +
-          scale_fill_manual(values = c("#512698", "#fdcc09"), na.value="dimgray")
-      z
-   }
-    else{
-      a <- allyrs %>%
-      filter(grad.year <= input$year) %>%
-      select(latin.honors, gender) %>%
-      mutate(latin.honors = ifelse(is.na(latin.honors) == TRUE, "None", latin.honors)) %>%
-      group_by(latin.honors, gender) %>%
-      summarize(count = n())
-
-      z <- a %>%
-        ggplot(aes(latin.honors, count, fill = gender)) +
-          geom_bar(stat = "identity", position = "dodge") +
-          ggtitle("Latin Honors and Gender") +
-          xlab("Latin Honors") +
-          ylab("Number of Graduates") +
-          guides(fill = guide_legend(title = "Gender")) +
-          labs(caption = "The number of students of each gender acheiving each level of latin honors.") +
-          ylim(0, 3000) +
-          scale_fill_manual(values = c("#512698", "#fdcc09"), na.value="dimgray")
-      z
-      }
-  })
-
-
+latin_honors_gender()
 ```
 
 A final, somewhat more trivial analysis of the data involves the distribution of initials. The initials() function performs this analysis and shows both the joint and marginal distribution of initials. Looking at the plot generated, we see several main trends. First, the distribution of last initials appears to be much more even than the distribution of first initials. This suggests that there may be some letters that are more popular than others. When given the choice of first initial, letters A-E, J-N, and R-T are given more than other letters. This could also simply be because there are more options for first names that start with these initials. The difference between first and last initals appears to be greatest in F-H and W, which all occur as last initials much more often than they do as first initials. Another interesting aspect of the graphic is observing which first initials are more or less popular given a last initial. For example, L and K occur as last initials at a similar rate. However, the pairing CL occurs much more frequently than the pairing CK, possibly due to avoidance of alliteration. Inversely, while E and K occur about as frequently as first names, EC occurs much more than KC. The plot offers the opportunity to make many other observations, and I invite the reader to explore them. Further advancements on this subject could include showing change over time, further breakdown by name, or breaking this down by sound rather than letter to further examine how sound affects name choice.
